# iot-powersquat-optimize

./: .env.example  .gitignore  README.md  app.py  arduino-cli.yaml  compose.yml  pyproject.toml  requirements.txt
M5StickC/: M5StickC.ino
routes/: exception.py  handle.py
routes/analysis/: __init__.py  handle.py
routes/home/: __init__.py  handle.py
routes/inbody/: __init__.py  gcloud.py  handle.py  process.py
routes/iot/: __init__.py  handle.py  receive.py
routes/skeleton/: __init__.py  handle.py
utils/: __init__.py  database.py  line.py  post.py  r2.py  tmp.py
